tests/error/modifier_errors/variable_leak.err
Error: Variable not defined (at $FILE:9:11)
  | 
7 |     with power(1):
8 |         x = 1
9 |     return x + 2
  |            ^ `x` is not defined

Guppy compilation failed due to 1 previous error
